# pdf-table-extractor

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 8191e309a223_initial_migration.py
src/mine_u/: main.py  pyproject.toml
src/pdf_extractor/: celery_app.py  main.py
src/pdf_extractor/api/: __init__.py  task.py  tasks.py
src/pdf_extractor/core/: config.py  logger.py
src/pdf_extractor/crud/: base.py  task.py
src/pdf_extractor/db/: base.py  models.py  session.py
src/pdf_extractor/schemas/: task.py
src/pdf_extractor/services/: parser_service.py
src/pdf_extractor/worker/: tasks.py
